# ED_Practica

./: .gitignore  CMakeLists.txt  ListaPersonas.cpp  ListaPersonas.h  README.md  main.cpp
ED_Enteros/: ColaEnteros.cpp  ColaEnteros.h  ListaCircularDoblementeEnlazada.cpp  ListaCircularDoblementeEnlazada.h  ListaCircularEnteros.cpp  ListaCircularEnteros.h  ListaDoblementeEnlazadaEnteros.cpp  ListaDoblementeEnlazadaEnteros.h  ListaEnteros.cpp  ListaEnteros.h  NodoEnteros.cpp  NodoEnteros.h  NodoEnterosDoblementeEnlazado.cpp  NodoEnterosDoblementeEnlazado.h  PilaEnteros.cpp  PilaEnteros.h
ED_Personas/: ListaPersonas.cpp  ListaPersonas.h  NodoPersona.cpp  NodoPersona.h  Persona.cpp  Persona.h
